- Added admin area context awareness to template class. - Implemented public-area width restriction via switch - admin area now scales to screen size. - Pre-cursor to admin area clean-up, to follow in a future commit. - Added some spacing to the bottom of the gallery view template (for when paging tool is displayed). - Relates to issue #462147.

--- a/templates/en/css/dynamic_css.tpl.css
+++ b/templates/en/css/dynamic_css.tpl.css
@@ -212,18 +212,15 @@ p.centenary { padding: 16px 0 0 0; }
     top: 0pt;
     margin: 0px auto;
     padding: 25px 0 25px 0;
-    width: 955px;
-    /*
-    opacity: 0.85;
-	-moz-border-radius-topleft:8px;
-	-moz-border-radius-topright:8px;
-	*/
     font-family: 'Helvetica Neue', Arial, Verdana, sans-serif;
     font-size: 12px;
-    /*height: auto;*/
     min-height:500px;
     height:auto !important;
     height:500px;
+}
+
+.content-restrict {
+    width: 955px;
 }
 
 /* END FEZ NEW */
@@ -693,7 +690,9 @@ width: 2em;
 
 
 .admin-wrapper {
-    /*background-color: #E7EDF9;*/
+    padding: 10px;
+    margin: 10px;
+    width: auto;
 }
 
 .admin-box {
@@ -1185,6 +1184,7 @@ td.search_multi_input {
 .result-box {
 	position: relative;
 	margin-bottom: 1.5em;
+    padding-bottom: 15px;
 	background: #f2f2f2 url([[$smarty.const.APP_RELATIVE_URL]]images/bg-boxes-bottom.png) bottom left no-repeat;
 }
 
